[gd_scene load_steps=12 format=3 uid="uid://vbeam2q3uv3v"]

[ext_resource type="Script" path="res://bullet.gd" id="1_wvb2e"]

[sub_resource type="SphereShape3D" id="SphereShape3D_tuanx"]
resource_local_to_scene = true
radius = 0.128

[sub_resource type="SphereMesh" id="SphereMesh_uvhq8"]
resource_local_to_scene = true
radius = 0.02
height = 0.04

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kqjeq"]

[sub_resource type="SphereShape3D" id="SphereShape3D_01l57"]
radius = 0.187

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7sl26"]
transparency = 1
albedo_color = Color(1, 1, 1, 0.0588235)
emission_enabled = true
emission = Color(0.784314, 0, 0, 1)
emission_energy_multiplier = 6.39

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_cq51e"]
lifetime_randomness = 0.15

[sub_resource type="SphereMesh" id="SphereMesh_kmfee"]
radius = 0.15
height = 0.3

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ea307"]
transparency = 1
albedo_color = Color(0, 0.505882, 0, 0.113725)
emission_enabled = true
emission = Color(0, 1, 0, 1)
emission_energy_multiplier = 8.73

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_80i7p"]
lifetime_randomness = 0.65

[sub_resource type="SphereMesh" id="SphereMesh_dou5h"]
radius = 0.15
height = 0.3

[node name="bullet" type="RigidBody3D"]
script = ExtResource("1_wvb2e")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.999886, -0.0150791, 0, 0.0150791, 0.999886, 0, 0, 0)
shape = SubResource("SphereShape3D_tuanx")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_uvhq8")
surface_material_override/0 = SubResource("StandardMaterial3D_kqjeq")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_01l57")

[node name="normal_trail" type="GPUParticles3D" parent="."]
material_override = SubResource("StandardMaterial3D_7sl26")
emitting = false
amount = 60
process_material = SubResource("ParticleProcessMaterial_cq51e")
draw_pass_1 = SubResource("SphereMesh_kmfee")

[node name="add_trail" type="GPUParticles3D" parent="."]
material_override = SubResource("StandardMaterial3D_ea307")
emitting = false
amount = 80
process_material = SubResource("ParticleProcessMaterial_80i7p")
draw_pass_1 = SubResource("SphereMesh_dou5h")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
